# ata

./: .gitignore  Makefile.am  README.md  aalos.for  amsc.for  asorp.for  ata.for  ataINCS.inc  ataOBJS.inc  configure.ac  tape5.txt  tape6.txt
